--- a/index.html
+++ b/index.html
@@ -525,6 +525,14 @@
             }
         };
 
+        // Helper to format average time as HH:MM
+        function formatAverageTime(totalMinutes) {
+            if (!totalMinutes || totalMinutes <= 0) return "--:--";
+            const hours = Math.floor(totalMinutes / 60);
+            const minutes = Math.floor(totalMinutes % 60);
+            return `${hours.toString().padStart(2, '0')}:${minutes.toString().padStart(2, '0')}`;
+        }
+
         async function fetchEmployeeHistory(id, name, role) {
             selectedEmpId = id;
             document.getElementById('statName').innerText = name;
@@ -533,31 +541,58 @@
 
             const historySnap = await db.ref('attendance').once('value');
             const allDays = historySnap.val() || {};
-            let totalHours = 0, daysWorked = 0, chartLabels = [], chartData = [], totalBreaks = 0, okBreaks = 0, punctDays = 0;
+            let totalHours = 0;
+            let daysWorked = 0;
+            let chartLabels = [];
+            let chartData = [];
+            let totalBreaks = 0;
+            let okBreaks = 0;
+            let punctDays = 0;
+            let clockInTimes = [];  // for average clock-in
 
             for (let i = 6; i >= 0; i--) {
-                const d = new Date(); d.setDate(d.getDate() - i);
+                const d = new Date();
+                d.setDate(d.getDate() - i);
                 const dStr = d.toISOString().split('T')[0];
                 chartLabels.push(d.toLocaleDateString('en-US', { weekday: 'short' }));
 
                 if (allDays[dStr] && allDays[dStr][id]) {
                     const log = allDays[dStr][id];
                     daysWorked++;
+
                     const duration = calculateDuration(log.TimeIn, log.TimeOut);
                     totalHours += duration;
                     chartData.push(duration);
 
+                    // Punctuality
                     if (log.TimeIn && log.TimeIn <= LATE_THRESHOLD) punctDays++;
+
+                    // Lunch compliance
                     if (log.LunchOut && log.LunchBack) {
                         totalBreaks++;
                         if (calculateDuration(log.LunchOut, log.LunchBack) * 60 <= 60) okBreaks++;
+                    }
+
+                    // Collect valid clock-in times for average
+                    if (log.TimeIn) {
+                        const [h, m] = log.TimeIn.split(':').map(Number);
+                        clockInTimes.push(h * 60 + m);
                     }
                 } else {
                     chartData.push(0);
                 }
             }
 
+            // Calculate average clock-in
+            let avgClockIn = "--:--";
+            if (clockInTimes.length > 0) {
+                const sumMinutes = clockInTimes.reduce((a, b) => a + b, 0);
+                const avgMinutes = sumMinutes / clockInTimes.length;
+                avgClockIn = formatAverageTime(avgMinutes);
+            }
+
             document.getElementById('statTotalHours').innerText = totalHours.toFixed(1);
+            document.getElementById('statAvgClockIn').innerText = avgClockIn;
             document.getElementById('statPunctuality').innerText = daysWorked ? Math.round((punctDays / daysWorked) * 100) + '%' : '100%';
             document.getElementById('statBreakComp').innerText = totalBreaks ? Math.round((okBreaks / totalBreaks) * 100) + '%' : '100%';
 
@@ -632,11 +667,11 @@
                     const pdf = new jspdf.jsPDF({
                         orientation: 'portrait',
                         unit: 'px',
-                        format: [280, 280]  // small square format suitable for QR
+                        format: [280, 280]
                     });
 
                     pdf.setFillColor(255, 255, 255);
-                    pdf.rect(0, 0, 280, 280, 'F');  // white background
+                    pdf.rect(0, 0, 280, 280, 'F');
 
                     pdf.addImage(qrCanvas.toDataURL('image/png'), 'PNG', 30, 30, 220, 220);
 
